name:                tombstone
version:             0.0.1
synopsis:            An app for uploading your own personal wanted poster made using Haskell and Polymer
-- description:
homepage:            https://github.com/ShadowBan/Tombstone
license:             MIT
license-file:        LICENSE
author:              Michael Xavier
maintainer:          michael@michaelxavier.net
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable tombstone
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
