name:                tombstone
version:             0.0.1
synopsis:            An app for uploading your own personal wanted poster made using Haskell and Polymer
-- description:
homepage:            https://github.com/ShadowBan/Tombstone
bug-reports:         https://github.com/ShadowBan/Tombstone/issues
license:             MIT
license-file:        LICENSE
author:              Michael Xavier
maintainer:          michael@michaelxavier.net
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


flag lib-werror
  description: Build with all warnings and treat them as errors
  default: False
  manual: True


library
  build-depends:       base >= 4.6 && < 4.9
                     , text
                     , errors
                     , time
                     , postgresql-simple
                     , wai-middleware-static >= 0.6.0.1 && < 0.7
                     , Spock
                     , optparse-applicative >= 0.11.0.2 && < 0.12
                     , hoauth2
                     , http-client
                     , http-client-tls
                     , opaleye
                     , product-profunctors
                     , aeson
                     , mtl
                     , transformers
                     , lucid
  exposed-modules:     Web.Tombstone.Types
                     , Web.Tombstone.Schema
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(lib-werror)
     ghc-options: -Werror

executable migrate
  main-is:             Migrate.hs
  build-depends:       base >= 4.6 && < 4.9
                     , postgresql-simple-migration >= 0.1.3.0 && < 0.1.4
                     , errors
                     , postgresql-simple
                     , dotenv
  hs-source-dirs:      exec
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(lib-werror)
     ghc-options: -Werror

executable tombstone
  main-is:             Main.hs
  build-depends:       base >= 4.6 && < 4.9
                     , tombstone
                     , errors
                     , text
                     , optparse-applicative >= 0.11.0.2 && < 0.12
                     , Spock >= 0.7.8.0 && < 0.8
                     , wai-middleware-static >= 0.6.0.1 && < 0.7
                     , postgresql-simple
                     , opaleye
                     , time
                     , product-profunctors
                     , hoauth2
                     , http-client-tls
                     , http-client
                     , aeson
                     , mtl
                     , transformers
                     , lucid
                     , dotenv
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(lib-werror)
     ghc-options: -Werror


test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base
                     , tombstone
                     , tasty >= 0.10.1 && < 0.11
  ghc-options:         -Wall
  if flag(lib-werror)
     ghc-options: -Werror
